# clr-power-tweaks-clr

./: .clangd  .gitignore  CMakeLists.txt  build  config2.h.in
include/: clr_power.h  pci-good.h  usb-good.h
src/: data.h  main.c  mm.c  pci.c  usb.c
